[package]
name = "bhd5-decrypt-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bhd5_decrypt_rust"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint-dig = "0.8.1"

[dependencies.pkcs1]
version = "0.3.3"
features = ["alloc", "pem"]